--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -47,7 +47,7 @@
   @media(max-width: 26.75rem) {
     padding-left: 1.5rem;
     .landing-subtitle {
-      width: 32rem;
+      width: 26rem;
     }
 
     .landing-img {
